Move body type settings to use the standard interface
Additional cleanup, such as swapping Paths.get() with Path.of()